Validation with Joi added to the /characters and /spells endpoints.
