# src/models/charactersModel.js
@@ -5,12 +5,10 @@ const charactersSchema = new mongoose.Schema(
     name: { type: String, required: true },
     house: { type: String, required: true },
     blood_status: { type: String, required: true },
-    wand: {
-      wood: { type: String, required: true },
-      core: { type: String, required: true },
-      length: { type: String, required: true },
-    },
+    wand: { type: String, required: true },
     patronus: { type: String, required: true },
+    birth_year: { type: Number, required: true },
+    occupation: { type: String, required: true },
   },
   { collection: "Characters" }
 );
