# swagger.json
@@ -47,6 +47,12 @@
                 },
                 "patronus": {
                   "example": "any"
+                },
+                "birth_year": {
+                  "example": "any"
+                },
+                "occupation": {
+                  "example": "any"
                 }
               }
             }
@@ -101,6 +107,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -222,6 +231,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
